examples/bad/assign-to-undefined-variable-tuple.elina
fn main(): void {
  <x> = [10];
}